# PicoW-FreeRTOS

./: .gitignore  CMakeLists.txt  FreeRTOS_Pico.c  main.c
FreeRTOS/: CMakeLists.txt  FreeRTOSConfig.h
ProjectFile/: CMakeLists.txt  main.c  shell_port.c
freertos/: FreeRTOSConfig.h
service/: CMakeLists.txt
service/letter-shell/: shell_cfg.h  shell_cmd_list.c  shell_port.c
service/letter-shell/includes/: shell_port.h
service/letter-shell/src/: shell.c
service/wifi/src/: wifi_scan.c
